--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,6 +26,12 @@ body {
   text-align: center;
 }
 
+@media (max-width: 640px) {
+  .score {
+    font-size: 1rem;
+  }
+}
+
 .score-best {
   text-align-last: left;
 }
