--- a/src/css/style.css
+++ b/src/css/style.css
@@ -52,10 +52,13 @@ body {
   align-items: center;
   flex-wrap: wrap;
   background-color: #000000;
-  cursor: url('../images/hammer.png'), auto;
+  cursor: url('../images/hammer.png')30 -10, auto;
 }
 
 .cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 23%;
   height: 23%;
   margin: 1%;
@@ -71,7 +74,11 @@ body {
   background-size: 70%;
 }
 
-.character-boom {
+.cell-boom {
+  width: 50%;
+  height: 50%;
   background-image: url('../images/pngegg.png');
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
