--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,10 +24,14 @@ body {
 }
 
 .statistic {
-  width: 10%;
+  width: 20%;
   font-size: 2rem;
   color: #ffffff;
   text-align: center;
+}
+
+.score-life {
+  color: red;
 }
 
 @media (max-width: 640px) {
