--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 .statistic {
-  width: 20%;
+  width: 15%;
   font-size: 2rem;
   color: #ffffff;
   text-align: center;
@@ -36,6 +36,7 @@ body {
 
 @media (max-width: 640px) {
   .statistic {
+    width: 33%;
     font-size: 1rem;
   }
 }
@@ -72,6 +73,14 @@ body {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 70%;
+}
+
+.character-suprise {
+  background-image: url('../images/netology.svg');
+  
+  background-repeat: no-repeat;
+  background-size: 60%;
+
 }
 
 .cell-boom {
