--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,7 +16,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+  /* padding: 10px; */
 }
 
 .statistic div {
@@ -69,18 +69,18 @@ body {
 .character {
   width: 100%;
   height: 100%;
-  background-image: url('../images/goblin.png');
   background-repeat: no-repeat;
   background-position: center center;
+}
+
+.character-evil {
+  background-image: url('../images/goblin.png');
   background-size: 70%;
 }
 
 .character-suprise {
-  background-image: url('../images/netology.svg');
-  
-  background-repeat: no-repeat;
+  background-image: url('../images/duck.png');
   background-size: 60%;
-
 }
 
 .cell-boom {
