--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,6 +4,10 @@
 
 body {
   background: rgb(0, 0, 0);
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
 }
 
 .container {
