--- a/src/css/style.css
+++ b/src/css/style.css
@@ -112,6 +112,9 @@ body {
   height: 100%;
   background-repeat: no-repeat;
   background-position: center center;
+
+  background-image: url('../images/goblin.png');
+  background-size: 70%;
 }
 
 .character-evil {
